Shrink wrap modifier causes very high CPU usage when targeting meshes with shaped keys #40831

Closed
opened 2014-06-27 08:46:05 +02:00 by Colin · 5 comments

System Information
Windows 7 64bit. geforce gtx 770

Blender Version
Broken: 2.71
Worked: 2.70a

Short description of error
having a object with a shrinkwrap modifier targeting a object with a shape key, and pressing play (Alt+A) causes very high CPU usage
(7% usage with no shape key, to 100% usage with)
(you may need to open up Windows task manager and click on the performance tab to see it)
despite nothing in the scene being animated.

Exact steps for others to reproduce the error
on the default cube scene
add a flat plane mesh above the cube
give it a shrinkwrap modifier and have it target the cube
now give the default cube a shape key
press play

Shape_key_and_shrink_wrap_performanc_issue.blend

system-info.txt

**System Information** Windows 7 64bit. geforce gtx 770 **Blender Version** Broken: 2.71 Worked: 2.70a **Short description of error** having a object with a shrinkwrap modifier targeting a object with a shape key, and pressing play (Alt+A) causes very high CPU usage (7% usage with no shape key, to 100% usage with) (you may need to open up Windows task manager and click on the performance tab to see it) despite nothing in the scene being animated. **Exact steps for others to reproduce the error** on the default cube scene add a flat plane mesh above the cube give it a shrinkwrap modifier and have it target the cube now give the default cube a shape key press play [Shape_key_and_shrink_wrap_performanc_issue.blend](https://archive.blender.org/developer/F95719/Shape_key_and_shrink_wrap_performanc_issue.blend) [system-info.txt](https://archive.blender.org/developer/F95720/system-info.txt)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @WASDkeys

Added subscriber: @WASDkeys
Sergey Sharybin self-assigned this 2014-06-27 10:36:02 +02:00

This issue was referenced by 5bfbe64a21

This issue was referenced by 5bfbe64a21bea22e442bafee3f5720d5d5d28bdf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 5bfbe64a21.

Closed by commit 5bfbe64a21.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40831
No description provided.