Fix T40831: Shrink wrap modifier causes very high CPU usage when targeting meshes with shaped keys

Same issue as revious one -- need to start OMP threads only
when there's enough data to crunch.